FIX - correccion de impreciones, correccion  reg_proceso

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "ncurses.h": "c",
         "leer_archivo.h": "c",
         "instrucciones.h": "c",
-        "validar.h": "c"
+        "validar.h": "c",
+        "controlador.h": "c"
     }
 }
